# videotool

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  00-FRAME.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  FRAME.md  LICENSE  LIMITATIONS.md  LOCAL_LLM_STATUS.md  MAP.md  README.md  RELEASE_SETUP.md  ROADMAP.md  TODOS.md  package-lock.json  package.json  pyproject.toml  svelte.config.js  test_prompt.py  videotool.spec  vodtool.spec
.github/workflows/: pages.yml  release.yml
cloudflare-worker/: wrangler.toml
cloudflare-worker/src/: worker.js
cloudflare-worker/tests/: worker.test.mjs
docs/: 01-ROADMAP.md
docs/history/: local-llm-implementation.md  mvp-build-tickets.md
docs/research/: llm-for-diarization.md  local-llm-for-topics.md
landing/: index.html
landing/stats/: index.html
scripts/: dev.sh
src-svelte/routes/: +page.svelte  Asteroids.svelte
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  viewer.html
src-tauri/src/demo/: beats.json  meta.json
src/videotool/: __init__.py  cli.py  embeddings.py  llm.py  transcription.py
src/videotool/commands/: __init__.py  chunks.py  compare_llm.py  cutplan.py  diarize.py  diarize_review.py  embed.py  explain_chunk.py  export.py  ingest.py  inspect_topic.py  label_topics.py  list_topics.py  llm_beats.py  llm_topics.py  merge_topics.py  segment_topics.py  show_topics.py  topics.py  transcribe.py
src/videotool/utils/: __init__.py  file_utils.py  pipeline.py  twitch.py  validation.py
src/vodtool/: __init__.py  cli.py  embeddings.py  llm.py  transcription.py
src/vodtool/commands/: __init__.py  chunks.py  compare_llm.py  cutplan.py  diarize.py  diarize_review.py  embed.py  explain_chunk.py  export.py  ingest.py  inspect_topic.py  label_topics.py  list_topics.py  llm_beats.py  llm_topics.py  merge_topics.py  segment_topics.py  show_topics.py  topics.py  transcribe.py
src/vodtool/utils/: __init__.py  file_utils.py  pipeline.py  twitch.py  validation.py
tests/: __init__.py  conftest.py  test_cli.py  test_embeddings.py  test_llm.py  test_llm_beats.py  test_transcription.py
tests/commands/: test_ingest.py  test_transcribe.py
tests/utils/: __init__.py  test_file_utils.py  test_pipeline.py  test_twitch.py  test_validation.py
tools/: beat-viewer.html
