[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vodtool"
version = "0.1.2"
description = "A local, transcript-first CLI tool for extracting topic-focused videos from long multi-topic streams"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "VodTool Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.9.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
local = [
    "openai-whisper>=20231117",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "pyannote.audio>=3.1.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
vodtool = "vodtool.cli:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "ISC",   # flake8-implicit-str-concat
    "PTH",   # flake8-use-pathlib
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "COM",   # flake8-commas
]

ignore = [
    "BLE001",    # Allow catching Exception (common pattern in CLI tools)
    "PLR0911",   # Allow many return statements (early returns are good)
    "PLR0912",   # Allow many branches
    "PLR0915",   # Allow many statements in functions
    "C901",      # Allow complex functions (domain complexity)
    "TRY300",    # Allow return in try block
    "PLC0415",   # Allow imports not at top-level (optional dependencies)
    "S603",      # Allow subprocess calls (ffmpeg, ffprobe)
    "S607",      # Allow partial executable paths
    "S608",      # Allow parameterized SQL (safe with placeholders)
    "ARG001",    # Allow unused function arguments (future use)
    "ANN001",    # Don't require type annotations for all arguments
    "TRY400",    # Allow logger.error in exception handlers
    "B008",      # Allow function calls in defaults (typer pattern)
]
